--- a/index.html
+++ b/index.html
@@ -109,14 +109,23 @@
                                     Выберите тип:
                                 </div>
                                 <div class="custom-dropdown__drop-block">
-                                    <input type="radio" name="type-noise" id="el1" class="custom-dropdown__checkbox">
-                                    <label for="el1" class="custom-dropdown__checkbox-label">First el 1</label>
+                                    <input type="radio" name="type-noise" id="el1" class="custom-dropdown__checkbox" value="NOISE_UNIFORM">
+                                    <label for="el1" class="custom-dropdown__checkbox-label">NOISE_UNIFORM</label>
 
-                                    <input type="radio" name="type-noise" id="el2" class="custom-dropdown__checkbox">
-                                    <label for="el2" class="custom-dropdown__checkbox-label">First el 2</label>
+                                    <input type="radio" name="type-noise" id="el2" class="custom-dropdown__checkbox" value="NOISE_GAUSSIAN">
+                                    <label for="el2" class="custom-dropdown__checkbox-label">NOISE_GAUSSIAN</label>
                                     
-                                    <input type="radio" name="type-noise" id="el3" class="custom-dropdown__checkbox">
-                                    <label for="el3" class="custom-dropdown__checkbox-label">First el 3</label>
+                                    <input type="radio" name="type-noise" id="el3" class="custom-dropdown__checkbox" value="NOISE_MULTIPLICATIVEGAUSSIAN">
+                                    <label for="el3" class="custom-dropdown__checkbox-label">NOISE_MULTIPLICATIVEGAUSSIAN</label>
+
+                                    <input type="radio" name="type-noise" id="el4" class="custom-dropdown__checkbox" value="NOISE_IMPULSE">
+                                    <label for="el4" class="custom-dropdown__checkbox-label">NOISE_IMPULSE</label>
+
+                                    <input type="radio" name="type-noise" id="el5" class="custom-dropdown__checkbox" value="NOISE_LAPLACIAN">
+                                    <label for="el5" class="custom-dropdown__checkbox-label">NOISE_LAPLACIAN</label>
+
+                                    <input type="radio" name="type-noise" id="el6" class="custom-dropdown__checkbox" value="NOISE_POISSON">
+                                    <label for="el6" class="custom-dropdown__checkbox-label">NOISE_POISSON</label>
                                 </div>
                             </div>
                         </div>
