--- a/index.html
+++ b/index.html
@@ -140,15 +140,7 @@
                                 <div class="custom-dropdown__btn" tabindex="0" outfor="border_color">
                                     Выберите цвет
                                 </div>
-                                <div class="custom-dropdown__drop-block">
-                                    <input type="radio" name="border_color" id="border_color1" class="custom-dropdown__checkbox">
-                                    <label for="border_color1" class="custom-dropdown__checkbox-label">First el 1</label>
-
-                                    <input type="radio" name="border_color" id="border_color2" class="custom-dropdown__checkbox">
-                                    <label for="border_color2" class="custom-dropdown__checkbox-label">First el 2</label>
-                                    
-                                    <input type="radio" name="border_color" id="border_color3" class="custom-dropdown__checkbox">
-                                    <label for="border_color3" class="custom-dropdown__checkbox-label">First el 3</label>
+                                <div class="custom-dropdown__drop-block" id="colors">
                                 </div>
                             </div>
                         </div>
@@ -225,6 +217,7 @@
     </main>
     <script src="./js/lib/dropFiles.js"></script>
     <script src="./js/lib/customDropdown.js"></script>
+    <script src="./js/lib/colors.js"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
