--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
                         <label for="blur" class="checkbox-label">Добавить фильтр размытия к изображению</label>
                         <div class="form-col">
                             <div class="inp-desc">Радиус размытия:</div>
-                            <input type="text" name="blur_radius">
+                            <input type="number" name="blur_radius">
                         </div>
                         <div class="form-col">
                             <div class="inp-desc">Стандартное отклонение:</div>
-                            <input type="text" name="blur_otkl">
+                            <input type="number" name="blur_otkl">
                         </div>
                     </div>
                     <div class="form-row-min">
@@ -80,11 +80,11 @@
                         <label for="adaptive_blur" class="checkbox-label">Добавить адаптивный фильтр размытия к изображению</label>
                         <div class="form-col">
                             <div class="inp-desc">Радиус Гаусса:</div>
-                            <input type="text" name="adaptive_blur_radius">
+                            <input type="number" name="adaptive_blur_radius">
                         </div>
                         <div class="form-col">
                             <div class="inp-desc">Стандартное отклонение:</div>
-                            <input type="text" name="adaptive_blur_stddev">
+                            <input type="number" name="adaptive_blur_stddev">
                         </div>
                     </div>
                     <div class="form-row-min">
@@ -92,11 +92,11 @@
                         <label for="sharpen" class="checkbox-label">Улучшить резкость изображения</label>
                         <div class="form-col">
                             <div class="inp-desc">Радиус Гаусса:</div>
-                            <input type="text">
+                            <input type="number">
                         </div>
                         <div class="form-col">
                             <div class="inp-desc">Стандартное отклонение:</div>
-                            <input type="text">
+                            <input type="number">
                         </div>
                     </div>
                     <div class="form-row-min">
@@ -146,11 +146,11 @@
                         </div>
                         <div class="form-col ml-sm-0 mt-sm">
                             <div class="inp-desc">Ширина рамки пикселей:</div>
-                            <input type="text" name="border_width">
+                            <input type="number" name="border_width">
                         </div>
                         <div class="form-col mt-sm">
                             <div class="inp-desc">Высота рамки пикселей:</div>
-                            <input type="text" name="border_height">
+                            <input type="number" name="border_height">
                         </div>
                     </div>
                     <div class="form-row">
@@ -158,11 +158,11 @@
                         <label for="emboss" class="checkbox-label">Изображение в градациях серого с трехмерным эффектом</label>
                         <div class="form-col">
                             <div class="inp-desc">Радиус эффекта:</div>
-                            <input type="text">
+                            <input type="number">
                         </div>
                         <div class="form-col">
                             <div class="inp-desc">Сигма эффекта:</div>
-                            <input type="text">
+                            <input type="number">
                         </div>
                     </div>
                     <div class="form-row">
@@ -180,7 +180,7 @@
                         <label for="spread" class="checkbox-label">Случайно сместить каждый пиксель в блоке (размытие)</label>
                         <div class="form-col-sm">
                             <div class="inp-desc">Радиус эффекта:</div>
-                            <input type="text" name="spread_radius">
+                            <input type="number" name="spread_radius">
                         </div>
                         <div class="form-col"></div>
                     </div>
@@ -189,7 +189,7 @@
                         <label for="swirl" class="checkbox-label">Закрутить пиксели вокруг центра изображения</label>
                         <div class="form-col-sm">
                             <div class="inp-desc">Градусы размаха дуги:</div>
-                            <input type="text" name="swirl_radius">
+                            <input type="number" name="swirl_radius">
                         </div>
                         <div class="form-col-sm"></div>
                     </div>
@@ -203,11 +203,11 @@
                         </div>
                         <div class="form-col ml-sm-0 mt-sm">
                             <div class="inp-desc">Расположение по оси X:</div>
-                            <input type="text" name="watermark_x">
+                            <input type="number" name="watermark_x">
                         </div>
                         <div class="form-col mt-sm">
                             <div class="inp-desc">Расположение по оси Y:</div>
-                            <input type="text" name="watermark_y">
+                            <input type="number" name="watermark_y">
                         </div>
                     </div>
                     <button type="submit" class="form-submit">Уникализировать</button>
