--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
                         <label for="sharpen" class="checkbox-label">Улучшить резкость изображения</label>
                         <div class="form-col">
                             <div class="inp-desc">Радиус Гаусса:</div>
-                            <input type="number">
+                            <input type="number" name="sharpen_radius">
                         </div>
                         <div class="form-col">
                             <div class="inp-desc">Стандартное отклонение:</div>
-                            <input type="number">
+                            <input type="number" name="sharpen_stddev">
                         </div>
                     </div>
                     <div class="form-row-min">
